implementation of the server side of the backup api

--- a/smos-server/package.yaml
+++ b/smos-server/package.yaml
@@ -45,11 +45,13 @@ library:
   - text
   - time
   - typed-uuid
+  - unliftio
   - wai
   - wai-extra
   - warp
   - yaml
   - yamlparse-applicative
+  - zip
 
 executables:
   smos-server:
