this doesn't seem to work

--- a/smos-web-server/package.yaml
+++ b/smos-web-server/package.yaml
@@ -38,6 +38,7 @@ library:
   - persistent-sqlite
   - pretty-relative-time
   - pretty-show
+  - servant
   - servant-auth-client
   - servant-client
   - shakespeare
