--- a/smos-server-gen/package.yaml
+++ b/smos-server-gen/package.yaml
@@ -78,3 +78,24 @@ tests:
     - text
     - zip
     - zstd
+
+executables:
+  smos-server-end-to-end-test:
+    main: Main.hs
+    source-dirs: app/
+    build-tools: sydtest-discover
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -Wall
+    dependencies:
+    - http-client
+    - http-client-tls
+    - http-types
+    - servant-client
+    - smos-client
+    - smos-data
+    - smos-server
+    - sydtest
+    - text
