get the end to end tests to pass against prod

--- a/smos-server-gen/package.yaml
+++ b/smos-server-gen/package.yaml
@@ -93,6 +93,8 @@ executables:
     - http-client
     - http-client-tls
     - http-types
+    - mtl
+    - semver
     - servant-client
     - smos-client
     - smos-data
