--- a/smos-api-gen/package.yaml
+++ b/smos-api-gen/package.yaml
@@ -48,6 +48,7 @@ tests:
     - genvalidity-sydtest-aeson
     - mergeful
     - path
+    - semver
     - smos-api
     - smos-api-gen
     - smos-data
