property tests for the web server

--- a/smos-web-server/package.yaml
+++ b/smos-web-server/package.yaml
@@ -90,8 +90,10 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
+    - QuickCheck
     - bytestring
     - containers
+    - genvalidity-sydtest
     - http-client
     - http-types
     - monad-logger
