--- a/smos-docs-site/smos-docs-site.cabal
+++ b/smos-docs-site/smos-docs-site.cabal
@@ -16,6 +16,71 @@ license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
     routes
+    content/assets/logo.svg
+    content/assets/smos-cheat-sheet.jpeg
+    content/assets/smos-cheat-sheet.pdf
+    content/assets/smos.png
+    content/pages/blogposts.markdown
+    content/pages/building-installation.markdown
+    content/pages/cheat-sheet.markdown
+    content/pages/configuration-reference.markdown
+    content/pages/current-versions.markdown
+    content/pages/customisation-default.markdown
+    content/pages/customisation-haskell.markdown
+    content/pages/development/branch-strategy.markdown
+    content/pages/development/end-to-end-tests.markdown
+    content/pages/development/release-checklist.markdown
+    content/pages/directories.markdown
+    content/pages/features.markdown
+    content/pages/file-browser.markdown
+    content/pages/installation/nix.markdown
+    content/pages/installation/nixos.markdown
+    content/pages/installation/stack.markdown
+    content/pages/installation/windows.markdown
+    content/pages/related-projects.markdown
+    content/pages/smos-api.markdown
+    content/pages/smos-archive.markdown
+    content/pages/smos-calendar-import.markdown
+    content/pages/smos-calendar-import/nixos.markdown
+    content/pages/smos-file.markdown
+    content/pages/smos-github.markdown
+    content/pages/smos-notify.markdown
+    content/pages/smos-notify/nixos.markdown
+    content/pages/smos-query.markdown
+    content/pages/smos-query/agenda.markdown
+    content/pages/smos-query/clock.markdown
+    content/pages/smos-query/entry.markdown
+    content/pages/smos-query/log.markdown
+    content/pages/smos-query/next.markdown
+    content/pages/smos-query/projects.markdown
+    content/pages/smos-query/report.markdown
+    content/pages/smos-query/standard-arguments.markdown
+    content/pages/smos-query/stats.markdown
+    content/pages/smos-query/stuck.markdown
+    content/pages/smos-query/tags.markdown
+    content/pages/smos-query/waiting.markdown
+    content/pages/smos-query/work.markdown
+    content/pages/smos-scheduler.markdown
+    content/pages/smos-scheduler/nixos.markdown
+    content/pages/smos-server.markdown
+    content/pages/smos-server/backups.markdown
+    content/pages/smos-server/nixos.markdown
+    content/pages/smos-single.markdown
+    content/pages/smos-sync-client.markdown
+    content/pages/smos-sync-client/database-migration.markdown
+    content/pages/smos-sync-client/nixos.markdown
+    content/pages/smos-web-server.markdown
+    content/pages/smos-web-server/nixos.markdown
+    content/pages/smos.markdown
+    content/pages/support.markdown
+    content/pages/synchronisation.markdown
+    content/changelogs/2020-09-25.markdown
+    content/changelogs/2020-11-04.markdown
+    content/changelogs/2020-12-16.markdown
+    content/changelogs/2021-02-01.markdown
+    content/changelogs/2021-03-13.markdown
+    content/changelogs/2021-04-09.markdown
+    content/changelogs/2021-04-30.markdown
     content/unreleased.markdown
     templates/args.hamlet
     templates/changelog.hamlet
