--- a/smos-server-gen/package.yaml
+++ b/smos-server-gen/package.yaml
@@ -7,6 +7,8 @@ copyright: ! 'Copyright: (c) 2019-2020 Tom Sydney Kerckhove'
 license: MIT
 homepage: https://github.com/NorfairKing/smos
 
+extra-source-files: test_resources/**/*
+
 dependencies:
 - base
 
