Send the 'referer' header along in requests to the API

--- a/smos-sync-client/package.yaml
+++ b/smos-sync-client/package.yaml
@@ -25,9 +25,10 @@ library:
   - envparse
   - filelock
   - filepath
-  - http-types
+  - hostname
   - http-client
   - http-client-tls
+  - http-types
   - mergeful
   - monad-logger
   - mtl
