--- a/smos-sync-client/smos-sync-client.cabal
+++ b/smos-sync-client/smos-sync-client.cabal
@@ -52,6 +52,7 @@ library
     , envparse
     , filelock
     , filepath
+    , hostname
     , http-client
     , http-client-tls
     , http-types
