docs about the static executables

--- a/smos-docs-site/smos-docs-site.cabal
+++ b/smos-docs-site/smos-docs-site.cabal
@@ -33,6 +33,7 @@ extra-source-files:
     content/pages/directories.markdown
     content/pages/features.markdown
     content/pages/file-browser.markdown
+    content/pages/installation/$
     content/pages/installation/executables.markdown
     content/pages/installation/nix.markdown
     content/pages/installation/nixos.markdown
