do clipboard via xclip instead of via the x library

--- a/smos/smos.cabal
+++ b/smos/smos.cabal
@@ -115,8 +115,7 @@ library
       src/
   ghc-options: -Wall
   build-depends:
-      Clipboard
-    , aeson
+      aeson
     , async
     , base
     , brick
