--- a/smos-server-gen/smos-server-gen.cabal
+++ b/smos-server-gen/smos-server-gen.cabal
@@ -120,6 +120,7 @@ test-suite smos-server-test
       Smos.Server.Handler.PostSyncSpec
       Smos.Server.Handler.PutRestoreBackupSpec
       Smos.Server.Handler.PutSmosFileSpec
+      Smos.Server.Looper.AutoBackupSpec
       Smos.Server.Looper.BackupGarbageCollectorSpec
       Paths_smos_server_gen
   hs-source-dirs:
@@ -155,6 +156,8 @@ test-suite smos-server-test
     , sydtest
     , sydtest-servant
     , text
+    , time
+    , typed-uuid
     , zip
     , zstd
   default-language: Haskell2010
