smos-github: refactor the command into a separate file

--- a/smos-github/package.yaml
+++ b/smos-github/package.yaml
@@ -10,6 +10,7 @@ homepage: https://github.com/NorfairKing/smos
 library:
   source-dirs: src/
   ghc-options: -Wall
+  build-tools: autoexporter
   dependencies:
     - aeson
     - async
