smos-server-gen: test for getting permissions

--- a/smos-server-gen/smos-server-gen.cabal
+++ b/smos-server-gen/smos-server-gen.cabal
@@ -115,6 +115,7 @@ test-suite smos-server-test
       Smos.Server.Handler.GetListSmosFilesSpec
       Smos.Server.Handler.GetNextActionReportSpec
       Smos.Server.Handler.GetPermissionsSpec
+      Smos.Server.Handler.GetSubscriptionSpec
       Smos.Server.Handler.PostBackupSpec
       Smos.Server.Handler.PostLoginSpec
       Smos.Server.Handler.PostRegisterSpec
