smos-web-server: an api endpoint for an admin to override the subscription end date for a user

--- a/smos-api/smos-api.cabal
+++ b/smos-api/smos-api.cabal
@@ -35,6 +35,7 @@ library
     , deepseq
     , dirforest
     , hashable
+    , http-api-data
     , memory
     , mergeful
     , mergeful-persistent
