--- a/smos-server/smos-server.cabal
+++ b/smos-server/smos-server.cabal
@@ -26,6 +26,7 @@ library
       Smos.Server.Handler
       Smos.Server.Handler.Admin
       Smos.Server.Handler.Admin.GetUsers
+      Smos.Server.Handler.Admin.PutUserSubscription
       Smos.Server.Handler.DeleteBackup
       Smos.Server.Handler.DeleteUser
       Smos.Server.Handler.GetAgendaReport
