allow admins to override the subscription of users

--- a/smos-web-server/package.yaml
+++ b/smos-web-server/package.yaml
@@ -62,6 +62,7 @@ library:
   - yesod
   - yesod-auth
   - yesod-autoreload
+  - yesod-form
   - yesod-static
   - yesod-static-remote
   - yesod-websockets
