--- a/smos-web-server/smos-web-server.cabal
+++ b/smos-web-server/smos-web-server.cabal
@@ -126,6 +126,7 @@ library
     , yesod
     , yesod-auth
     , yesod-autoreload
+    , yesod-form
     , yesod-static
     , yesod-static-remote
     , yesod-websockets
