--- a/smos-server/smos-server.cabal
+++ b/smos-server/smos-server.cabal
@@ -56,6 +56,7 @@ library
       Smos.Server.OptParse
       Smos.Server.OptParse.Types
       Smos.Server.Serve
+      Smos.Server.Subscription
   other-modules:
       Paths_smos_server
   hs-source-dirs:
