--- a/smos-server/smos-server.cabal
+++ b/smos-server/smos-server.cabal
@@ -42,6 +42,7 @@ library
       Smos.Server.Handler.GetUserSubscription
       Smos.Server.Handler.Import
       Smos.Server.Handler.PostBackup
+      Smos.Server.Handler.PostInitiateStripeCheckoutSession
       Smos.Server.Handler.PostLogin
       Smos.Server.Handler.PostRegister
       Smos.Server.Handler.PostStripeHook
@@ -75,6 +76,7 @@ library
     , dirforest
     , envparse
     , filepath
+    , http-client
     , jose
     , looper
     , mergeful
