--- a/smos-web-server/smos-web-server.cabal
+++ b/smos-web-server/smos-web-server.cabal
@@ -22,6 +22,7 @@ extra-source-files:
     templates/auth/login.hamlet
     templates/auth/register.hamlet
     templates/backups.hamlet
+    templates/checkout.hamlet
     templates/default-body.hamlet
     templates/default-page.hamlet
     templates/footer.hamlet
@@ -117,6 +118,7 @@ library
     , smos-sync-client
     , smos-web-style
     , stm
+    , stripe-client
     , template-haskell
     , text
     , time
