--- a/.github/workflows/stack-build.yml
+++ b/.github/workflows/stack-build.yml
@@ -38,6 +38,10 @@ jobs:
             .stack-work
           key: ${{ runner.os }}-${{ matrix.ghc }}-stack
 
+
+      - name: Generate Stripe client
+        run: ./scripts/generate-stripe-api.sh
+
       - name: Build dependencies
         run: |
           stack build --system-ghc --only-dependencies
