--- a/.github/workflows/stack-build.yml
+++ b/.github/workflows/stack-build.yml
@@ -39,6 +39,9 @@ jobs:
           key: ${{ runner.os }}-${{ matrix.ghc }}-stack
 
 
+      - name: Build openapi3-code-generator
+        run: stack install openapi3-code-generator
+
       - name: Generate Stripe client
         run: ./scripts/generate-stripe-api.sh
 
