--- a/.github/workflows/stack-build.yml
+++ b/.github/workflows/stack-build.yml
@@ -38,20 +38,19 @@ jobs:
             .stack-work
           key: ${{ runner.os }}-${{ matrix.ghc }}-stack
 
-
       - name: Build openapi3-code-generator
-        run: stack install openapi3-code-generator
+        run: stack install openapi3-code-generator --stack-yaml setup-stack.yaml
 
       - name: Generate Stripe client
         run: ./scripts/generate-stripe-api.sh
 
+      - name: Build autoexporter
+        run: |
+          stack install --system-ghc autoexporter --stack-yaml setup-stack.yaml
+
       - name: Build dependencies
         run: |
           stack build --system-ghc --only-dependencies
-
-      - name: Build autoexporter
-        run: |
-          stack install --system-ghc autoexporter
 
       - name: Build smos-data
         run: |
