--- a/smos-docs-site/package.yaml
+++ b/smos-docs-site/package.yaml
@@ -9,8 +9,9 @@ copyright: "2018-2020 Tom Sydney Kerckhove"
 extra-source-files:
 - routes
 - content/assets/**/*
-- content/pages/**/*
+- content/casts/**/*.yaml
 - content/changelogs/**/*
+- content/pages/**/*
 - content/unreleased.markdown
 - templates/**/*
 
