--- a/.github/workflows/niv-update.yml
+++ b/.github/workflows/niv-update.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: development
       - uses: cachix/install-nix-action@v12
       - uses: cachix/cachix-action@v8
         with:
