--- a/smos-docs-site/smos-docs-site.cabal
+++ b/smos-docs-site/smos-docs-site.cabal
@@ -110,6 +110,7 @@ extra-source-files:
     templates/default-page.hamlet
     templates/home.hamlet
     templates/menu.hamlet
+    templates/nixos-module.hamlet
     templates/page.hamlet
     templates/smos-actions.hamlet
     templates/smos-asciinema/spec.hamlet
@@ -138,6 +139,7 @@ library
       Smos.Docs.Site.Handler.CurrentVersions
       Smos.Docs.Site.Handler.Import
       Smos.Docs.Site.Handler.Keybindings
+      Smos.Docs.Site.Handler.Nix
       Smos.Docs.Site.Handler.Page
       Smos.Docs.Site.Handler.Reload
       Smos.Docs.Site.Handler.Sitemap
@@ -152,6 +154,8 @@ library
       Smos.Docs.Site.Handler.SmosSingle
       Smos.Docs.Site.Handler.SmosSyncClient
       Smos.Docs.Site.Handler.SmosWebServer
+      Smos.Docs.Site.ModuleDocs
+      Smos.Docs.Site.ModuleDocs.TH
       Smos.Docs.Site.OptParse
       Smos.Docs.Site.OptParse.Types
       Smos.Docs.Site.Static
@@ -164,7 +168,10 @@ library
   build-tool-depends:
       autoexporter:autoexporter
   build-depends:
-      base >=4.7
+      aeson
+    , aeson-pretty
+    , base >=4.7
+    , bytestring
     , cmark-gfm
     , containers
     , data-default
@@ -174,6 +181,7 @@ library
     , optparse-applicative
     , path
     , path-io
+    , pretty-show
     , raw-strings-qq
     , semver
     , shakespeare
