--- a/smos-scheduler/package.yaml
+++ b/smos-scheduler/package.yaml
@@ -29,7 +29,13 @@ library:
     - optparse-applicative
     - path
     - path-io
+    - pretty-relative-time
+    - pretty-show
+    - safe-coloured-text
+    - safe-coloured-text-layout
+    - safe-coloured-text-terminfo
     - smos-data
+    - smos-query
     - smos-report
     - text
     - time
@@ -65,20 +71,21 @@ tests:
     - cron
     - genvalidity
     - genvalidity-containers
+    - genvalidity-path
     - genvalidity-sydtest
     - genvalidity-sydtest-aeson
-    - genvalidity-path
     - genvalidity-text
     - genvalidity-time
-    - sydtest
     - mtl
     - path
     - path-io
     - smos-data
     - smos-data-gen
+    - smos-query
     - smos-report
     - smos-report-gen
     - smos-scheduler
+    - sydtest
     - text
     - time
     - yaml
