--- a/smos/smos.cabal
+++ b/smos/smos.cabal
@@ -63,6 +63,7 @@ extra-source-files:
     test_resources/scenario/tags/one.yaml
     test_resources/scenario/tags/preset.yaml
     test_resources/scenario/tags/two.yaml
+    test_resources/scenario/timestamps-deletion.yaml
     test_resources/scenario/todo-redo.yaml
     test_resources/scenario/todo-single.yaml
     test_resources/scenario/todo-undo.yaml
