--- a/smos-docs-site/smos-docs-site.cabal
+++ b/smos-docs-site/smos-docs-site.cabal
@@ -38,6 +38,7 @@ extra-source-files:
     content/changelogs/2021-04-30.markdown
     content/changelogs/2021-05-04.markdown
     content/changelogs/2021-05-24.markdown
+    content/changelogs/2021-06-26.markdown
     content/pages/blogposts.markdown
     content/pages/building-installation.markdown
     content/pages/cheat-sheet.markdown
