--- a/smos-web-server/package.yaml
+++ b/smos-web-server/package.yaml
@@ -1,9 +1,9 @@
 name: smos-web-server
-version: 0.5.0
+version: 0.6.0
 category: Smos
 author: Tom Sydney Kerckhove
 maintainer: syd@cs-syd.eu
-copyright: ! 'Copyright: (c) 2020 Tom Sydney Kerckhove'
+copyright: ! 'Copyright: (c) 2020-2021 Tom Sydney Kerckhove'
 license: MIT
 homepage: https://github.com/NorfairKing/smos
 
