--- a/smos/smos.cabal
+++ b/smos/smos.cabal
@@ -22,6 +22,8 @@ extra-source-files:
     test_resources/scenario/conv-new-entry-and-clock-in.yaml
     test_resources/scenario/conv-repinged-undo.yaml
     test_resources/scenario/conv-repinged.yaml
+    test_resources/scenario/conv-responded-but-still-waiting.yaml
+    test_resources/scenario/conv-responded.yaml
     test_resources/scenario/delete-contents.yaml
     test_resources/scenario/delete-forest.yaml
     test_resources/scenario/delete-node.yaml
